logs/dag_id=booking_ingestion/run_id=manual__2023-02-18T00:05:21.756936+00:00/task_id=load_data/attempt=1.log
[2023-02-18T00:05:23.914+0000] {taskinstance.py:1083} INFO - Dependencies all met for <TaskInstance: booking_ingestion.load_data manual__2023-02-18T00:05:21.756936+00:00 [queued]>
[2023-02-18T00:05:23.921+0000] {taskinstance.py:1083} INFO - Dependencies all met for <TaskInstance: booking_ingestion.load_data manual__2023-02-18T00:05:21.756936+00:00 [queued]>
[2023-02-18T00:05:23.922+0000] {taskinstance.py:1279} INFO - 
--------------------------------------------------------------------------------
[2023-02-18T00:05:23.923+0000] {taskinstance.py:1280} INFO - Starting attempt 1 of 1
[2023-02-18T00:05:23.924+0000] {taskinstance.py:1281} INFO - 
--------------------------------------------------------------------------------
[2023-02-18T00:05:23.933+0000] {taskinstance.py:1300} INFO - Executing <Task(PostgresOperator): load_data> on 2023-02-18 00:05:21.756936+00:00
[2023-02-18T00:05:23.939+0000] {standard_task_runner.py:55} INFO - Started process 1233 to run task
[2023-02-18T00:05:23.942+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'booking_ingestion', 'load_data', 'manual__2023-02-18T00:05:21.756936+00:00', '--job-id', '157', '--raw', '--subdir', 'DAGS_FOLDER/data_ingestion_dag/main.py', '--cfg-path', '/tmp/tmpguf1fmrf']
[2023-02-18T00:05:23.946+0000] {standard_task_runner.py:83} INFO - Job 157: Subtask load_data
[2023-02-18T00:05:24.008+0000] {task_command.py:388} INFO - Running <TaskInstance: booking_ingestion.load_data manual__2023-02-18T00:05:21.756936+00:00 [running]> on host f01ad4775be8
[2023-02-18T00:05:24.059+0000] {taskinstance.py:1509} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=booking_ingestion
AIRFLOW_CTX_TASK_ID=load_data
AIRFLOW_CTX_EXECUTION_DATE=2023-02-18T00:05:21.756936+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-02-18T00:05:21.756936+00:00
[2023-02-18T00:05:24.062+0000] {sql.py:254} INFO - Executing: 
             CREATE TABLE IF NOT EXISTS booking_record (
                    client_id INTEGER NOT NULL,
                    booking_date TEXT NOT NULL,
                    room_type TEXT(512) NOT NULL,
                    hotel_id INTEGER NOT NULL,
                    booking_cost NUMERIC,
                    currency TEXT,
                    age INTEGER,
                    client_name TEXT(512),
                    client_type TEXT(512),
                    hotel_name TEXT(512));
          
[2023-02-18T00:05:24.071+0000] {base.py:73} INFO - Using connection ID 'postgres_db' for task execution.
[2023-02-18T00:05:24.184+0000] {base.py:73} INFO - Using connection ID 'postgres_db' for task execution.
[2023-02-18T00:05:24.191+0000] {sql.py:375} INFO - Running statement: 
             CREATE TABLE IF NOT EXISTS booking_record (
                    client_id INTEGER NOT NULL,
                    booking_date TEXT NOT NULL,
                    room_type TEXT(512) NOT NULL,
                    hotel_id INTEGER NOT NULL,
                    booking_cost NUMERIC,
                    currency TEXT,
                    age INTEGER,
                    client_name TEXT(512),
                    client_type TEXT(512),
                    hotel_name TEXT(512));
          , parameters: None
[2023-02-18T00:05:24.195+0000] {taskinstance.py:1768} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 266, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: type modifier is not allowed for type "text"
LINE 5:                     room_type TEXT(512) NOT NULL,
                                      ^

[2023-02-18T00:05:24.204+0000] {taskinstance.py:1323} INFO - Marking task as FAILED. dag_id=booking_ingestion, task_id=load_data, execution_date=20230218T000521, start_date=20230218T000523, end_date=20230218T000524
[2023-02-18T00:05:24.214+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 157 for task load_data (type modifier is not allowed for type "text"
LINE 5:                     room_type TEXT(512) NOT NULL,
                                      ^
; 1233)
[2023-02-18T00:05:24.243+0000] {local_task_job.py:208} INFO - Task exited with return code 1
[2023-02-18T00:05:24.259+0000] {taskinstance.py:2578} INFO - 0 downstream tasks scheduled from follow-on schedule check
